After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738339 - Fix build on OS X
Fix build on OS X
Status: RESOLVED FIXED
Product: glade
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Glade 3 Maintainers
Glade 3 Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-11 05:42 UTC by Philip Chimento
Modified: 2014-10-12 18:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
osx: Use current gtk-mac-integration API (4.92 KB, patch)
2014-10-11 05:44 UTC, Philip Chimento
none Details | Review
style: Fix indentation of #ifdef block for OS X (3.38 KB, patch)
2014-10-11 05:45 UTC, Philip Chimento
none Details | Review

Description Philip Chimento 2014-10-11 05:42:04 UTC
There are no tabs in the rest of the file, so this matches the
surrounding indentation.
Comment 1 Philip Chimento 2014-10-11 05:43:59 UTC
Excuse the above description, git-bz did something I didn't expect.

Here's two patches to get Glade building again on OS X - there was an #ifdef'd section of code that hadn't been ported to widget templates while the surrounding code had, and in addition it used the old gtk-mac-integration API.
Comment 2 Philip Chimento 2014-10-11 05:44:59 UTC
Created attachment 288266 [details] [review]
osx: Use current gtk-mac-integration API

The #ifdef'd block did not compile at all because it used the old API
from gtk-mac-integration, and because it used GtkBuilder when the
surrounding code had been ported to use widget templates.

This fixes up the use of the API and adds a few widget variables to
GladeWindowPrivate which have to be bound to the template.
Comment 3 Philip Chimento 2014-10-11 05:45:18 UTC
Created attachment 288267 [details] [review]
style: Fix indentation of #ifdef block for OS X

There are no tabs in the rest of the file, so this matches the
surrounding indentation.
Comment 4 Philip Chimento 2014-10-11 05:46:07 UTC
(Sorry, the patches have to be applied in reverse order from how they are posted here. I'm still trying to grok git-bz.)
Comment 5 Philip Chimento 2014-10-11 05:46:39 UTC
Also, may I ask for this to be committed to the gnome-3-14 branch as well?
Comment 6 Tristan Van Berkom 2014-10-12 10:50:37 UTC
Hi Philip.

Thank you for having taken the time to path Glade for OSX.

In older days, I would normally take the time to test patches before applying, however I no longer carry a macbook so this is difficult.

I've pushed this to master, you'll note that we don't follow the GNOME branching scheme and instead (like GTK+) have our own release numbers, so I have pushed your patch to the glade-3-18 branch (which is our latest stable) as well.
Comment 7 Philip Chimento 2014-10-12 18:13:03 UTC
Awesome, thank you!