style: Fix indentation of #ifdef block for OS X

There are no tabs in the rest of the file, so this matches the
surrounding indentation.

https://bugzilla.gnome.org/show_bug.cgi?id=738339